# PowerGLFW

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
examples/: boing.c  gears.c  splitview.c  wave.c  windows.c
include/: linmath.h
include/GLFW/: glfw3.h
include/mac_gl/: agl.h  aglContext.h  aglMacro.h  aglRenderers.h  begin_code.h  close_code.h  gl.h  glext.h  gliContext.h  gliDispatch.h  glm.h  glu.h
src/: allocator.c  input.c  internal.h  keymap.c  keymap.h  monitors.c  platform.c  time.c  window.c
